minor fixes in jqwidgets improve jq-tree with expand-collapse buttons remove jqx-data.js inclusion

--- a/creature-editor-web/src/common/jqwidgets/jqwidgets.less
+++ b/creature-editor-web/src/common/jqwidgets/jqwidgets.less
@@ -3,3 +3,9 @@
 .jq-window .jqx-window-content {
 	overflow: hidden;
 }
+
+.jq-expand-collapse-buttons {
+	margin-bottom: 10px;
+	
+	button { margin-right: 10px; }
+}
